cabal-version:      3.0
name:               beyond
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             cidkidnix
maintainer:         cidkidnix@protonmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Beyond.Device
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      hid,
                      text,
                      bytestring,
                      transformers

    hs-source-dirs:   src
    default-language: Haskell2010

executable beyond
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        beyond

    hs-source-dirs:   exe
    default-language: Haskell2010
